--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "private": "true",
   "dependencies": {
     "@hotwired/stimulus": "^3.1.0",
-    "@hotwired/turbo-rails": "^7.2.0",
+    "@hotwired/turbo-rails": "^8.0.20",
     "@popperjs/core": "^2.11.6",
-    "@rails/actioncable": "^7.0.4",
-    "@rails/request.js": "^0.0.6",
+    "@rails/actioncable": "^8.1.100",
+    "@rails/request.js": "^0.0.12",
+    "@tailwindcss/cli": "^4.1.17",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.11",
-    "debounced": "^0.0.5",
-    "esbuild": "^0.15.7",
+    "debounced": "^2.0.1",
+    "esbuild": "^0.27.0",
     "esbuild-rails": "^1.0.3",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "turbo_power": "^0.1.2"
+    "tailwindcss": "^4.1.17",
+    "turbo_power": "^0.7.1"
   },
   "scripts": {
     "build": "node esbuild.config.js",
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+    "build:css": "npx @tailwindcss/cli -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
   }
 }
